--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -138,7 +138,7 @@ li:hover .fa {
   text-align: center;
   margin-bottom: 70px;
   color: #4a4a4a;
-  font-size: 1.414em;
+  font-size: 40px;
     line-height: 1.3260254597;
     display: block;
     margin-block-start: 0.83em;
@@ -149,7 +149,7 @@ li:hover .fa {
 }
 
 .project{
-  max-width: 936px;
+  max-width: 800px;
   margin: auto;
 }
 
@@ -166,8 +166,9 @@ li:hover .fa {
   color: black;
   text-align: center;
   border-radius: 20px;
+  font-size: small;
   box-sizing: border-box;
-  width: 240px;
+  width: 200px;
   padding: 10px;
   display: block;
   float: center;
@@ -178,6 +179,26 @@ li:hover .fa {
   color: white;
   text-decoration: none;
   background: #4f4f4f;
+}
+
+.visit{
+float: right;
+font-family: League Spartan,Helvetica,Arial,sans-serif;
+font-size: small;
+font-weight: bolder;
+letter-spacing: 3px;
+padding: 12px 20px;
+background-color: #f06449;
+background: linear-gradient(270deg,#f06449,#ef3636);
+color: #fff;
+position: relative;
+transition: all .3s;
+border-radius: 20px;
+}
+.visit:hover {
+  color: white;
+  text-decoration: none;
+  background: #723d3d;
 }
 
 /* header */
