--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -61,8 +61,6 @@ li:hover .fa {
 .myFont h2 {
   font-family: "roboto", sans-serif;
   font-weight: 600;
-  line-height: 65px;
-  margin-bottom: 10px;
   color: whitesmoke;
   overflow: hidden;
 }
@@ -79,7 +77,7 @@ li:hover .fa {
 
 .indent {
   padding-left: 10%;
-  margin-top: 50px;
+  margin-top: 25px;
 }
 
 .back-ground {
@@ -88,9 +86,11 @@ li:hover .fa {
   border-radius: 20px;
 }
 
-@media screen and (min-width: 1200px) {
-  .myFont h2 {
+@media screen and (min-width: 1100px) {
+  .indent{
     margin-top: 50px;
+  }
+  .myFont h2 {
     margin-bottom: 30px;
     padding: 20px 20px 20px 0px;
     font-size: 75px;
@@ -139,25 +139,25 @@ li:hover .fa {
   margin-bottom: 70px;
   color: #4a4a4a;
   font-size: 40px;
-    line-height: 1.3260254597;
-    display: block;
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
+  line-height: 1.3260254597;
+  display: block;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
 }
 
-.project{
+.project {
   max-width: 800px;
   margin: auto;
 }
 
-.project-banner{
+.project-banner {
   margin: 20px 5px 5px 0px;
 }
 
-.d-block{
+.d-block {
   max-height: 700px;
 }
 
@@ -181,20 +181,21 @@ li:hover .fa {
   background: #4f4f4f;
 }
 
-.visit{
-float: right;
-font-family: League Spartan,Helvetica,Arial,sans-serif;
-font-size: small;
-font-weight: bolder;
-letter-spacing: 3px;
-padding: 12px 20px;
-background-color: #f06449;
-background: linear-gradient(270deg,#f06449,#ef3636);
-color: #fff;
-position: relative;
-transition: all .3s;
-border-radius: 20px;
+.visit {
+  float: right;
+  font-family: League Spartan, Helvetica, Arial, sans-serif;
+  font-size: small;
+  font-weight: bolder;
+  letter-spacing: 3px;
+  padding: 12px 20px;
+  background-color: #f06449;
+  background: linear-gradient(270deg, #f06449, #ef3636);
+  color: #fff;
+  position: relative;
+  transition: all .3s;
+  border-radius: 20px;
 }
+
 .visit:hover {
   color: white;
   text-decoration: none;
@@ -206,7 +207,7 @@ border-radius: 20px;
 #top {
   background-image: url(../landingPageImages/background.jpg);
   background-color: rgb(28, 29, 37);
-  overflow-x: hidden;
+  overflow: hidden;
   transition: all .3s ease;
   height: 100vh;
 }
@@ -504,4 +505,5 @@ border-radius: 20px;
   .myFont h2 {
     line-height: 35px;
   }
+
 }
