changing source code link

--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -162,17 +162,17 @@ li:hover .fa {
 }
 
 .viewMore {
-  background: #E9ECEF;
+  background: #e0e4e7;
   color: black;
-  text-align: center;
-  border-radius: 20px;
+  float: right;
+  font-family: League Spartan, Helvetica, Arial, sans-serif;
   font-size: small;
-  box-sizing: border-box;
-  width: 200px;
-  padding: 10px;
-  display: block;
-  float: center;
-  margin-top: 20px;
+  font-weight: bolder;
+  letter-spacing: 1px;
+  padding: 12px 20px;
+  position: relative;
+  border-radius: 20px;
+  margin-left: 10px;
 }
 
 .can-hover .viewMore:hover {
